implement auteurs-controler and add pagination systems Refactor LivreController and add image upload functionality for book addition